--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,11 +1,14 @@
-# Set to false if you want to disable plugin
+# Set to false if you want to disable the plugin entirely.
 enabled: true
-# Message that is sent to the player after failed attempt
+# Enable sending message to players when crafting is denied.
+notify-player: true
+# Message that is sent to the player if notify-player is set to true.
 message: '&cYou aren''t permitted to craft item %item%'
-# Set to true if you want to block ALL items in the game from crafting
+# Set to true if you want to block ALL crafting.
 block-all-items: false
-# List of materials you would like to block from crafting if block-all-items is set to false
+# List of materials you would like to block from crafting if block-all-items is set to false.
 items:
   - 'LADDER'
   - 'TORCH'
+  - 'HOPPER'
   - 'GOLDEN_APPLE:1'
